Bug 168314 - Extension icons missing in menus
Summary: Extension icons missing in menus
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.4 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-09-08 04:51 UTC by Marco A.G.Pinto
Modified: 2025-11-09 12:10 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of issue (75.06 KB, image/png)
2025-09-08 04:51 UTC, Marco A.G.Pinto
Details
Image of advanced option (4.10 KB, image/png)
2025-09-08 21:29 UTC, m_a_riosv
Details
Screenshot before and after (95.54 KB, image/png)
2025-10-29 10:56 UTC, Marco A.G.Pinto
Details
WritingTool in Libo (25.2.7.2 vs 25.8.3.2 & 26.2.0dev) (100.63 KB, image/png)
2025-11-07 05:09 UTC, nutka
Details
Some icons still missing (90.04 KB, image/png)
2025-11-09 11:35 UTC, Marco A.G.Pinto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marco A.G.Pinto 2025-09-08 04:51:33 UTC
Created attachment 202729 [details]
Screenshot of issue

Heya, several icons are missing in the menus.

In the included screenshot: if I right-click over a typo, the pop-up menu has no icons at all.

I am using Windows 11 and the latest LibreOffice.
Comment 1 m_a_riosv 2025-09-08 21:29:23 UTC
Created attachment 202756 [details]
Image of advanced option

I think there was an option in Menu>Tools>Options>LibreOffice>View.
But seem it is not there now.


Attached an image with the option in Advanced options.
Comment 2 Buovjaga 2025-10-29 10:39:46 UTC
(In reply to Marco A.G.Pinto from comment #0)
> Created attachment 202729 [details]
> Screenshot of issue
> 
> Heya, several icons are missing in the menus.
> 
> In the included screenshot: if I right-click over a typo, the pop-up menu
> has no icons at all.
> 
> I am using Windows 11 and the latest LibreOffice.

For some reason, I'm not seeing "Spelling" in your screenshot. That is the only entry for me with an icon. But it makes sense as I don't think the others have icons at all, like Ignore. Maybe you could give other examples of menus with missing icons.
Comment 3 Marco A.G.Pinto 2025-10-29 10:56:48 UTC
Created attachment 203593 [details]
Screenshot before and after

Ilmary, here is the before and the after. Thanks!
Comment 4 Buovjaga 2025-10-29 11:31:41 UTC
(In reply to Marco A.G.Pinto from comment #3)
> Created attachment 203593 [details]
> Screenshot before and after
> 
> Ilmary, here is the before and the after. Thanks!

You see the entry "Com o verbo..." *does* have an icon. The difference is that you had icons for LanguageTool in the old version, but not for WritingTool in the new version. Is this a problem with WritingTool and not LibreOffice itself?
Comment 5 Marco A.G.Pinto 2025-10-29 11:40:21 UTC
(In reply to Buovjaga from comment #4)
> (In reply to Marco A.G.Pinto from comment #3)
> > Created attachment 203593 [details]
> > Screenshot before and after
> > 
> > Ilmary, here is the before and the after. Thanks!
> 
> You see the entry "Com o verbo..." *does* have an icon. The difference is
> that you had icons for LanguageTool in the old version, but not for
> WritingTool in the new version. Is this a problem with WritingTool and not
> LibreOffice itself?

Fred Kruse, developer of WritingTool, said that the issue is with LibreOffice.
Comment 6 Buovjaga 2025-10-29 15:32:52 UTC
Bibisected with win64-25.2 to 9d6e1594a298c9d41f3dc64ad80edf4b9868c2e8
Deduplicate and unify using vcl::GetBitmap

Install WritingTool from https://github.com/writingtool-org/writingtool/releases

If WritingTool doesn't work (nothing shows up in context menu), clear profile and install it again.
Comment 7 Mike Kaganski 2025-10-29 17:48:56 UTC
https://gerrit.libreoffice.org/c/core/+/193161
Comment 8 Commit Notification 2025-10-29 18:46:23 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a8216f500c223797b13976678924b76c5effec65

tdf#168314: check if xGraphic is empty, not Any

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-10-30 08:42:49 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/da6b70633ac6bf78ce0a68022518396a2c650970

tdf#168314: check if xGraphic is empty, not Any

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-11-03 16:06:32 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-3":

https://git.libreoffice.org/core/commit/25a24b99856a9725567fde096e7e11f0a3539ce4

tdf#168314: check if xGraphic is empty, not Any

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 nutka 2025-11-07 05:07:56 UTC
I installed WritingTool 25.10 on Windows 11 with LibreOffice 26.2.0.0.alpha0+ and 25.8.3.2 (X86_64). 

Does the attached image confirm that this issue has been resolved?
Comment 12 nutka 2025-11-07 05:09:14 UTC
Created attachment 203786 [details]
WritingTool in Libo (25.2.7.2 vs 25.8.3.2 & 26.2.0dev)
Comment 13 Marco A.G.Pinto 2025-11-07 06:10:08 UTC Comment hidden (off-topic)
Comment 14 Marco A.G.Pinto 2025-11-07 06:11:42 UTC
but yes, your screenshots show the bug fixed.

Thank you, developers, for the fix.

:-)
Comment 15 nutka 2025-11-07 06:22:19 UTC Comment hidden (off-topic)
Comment 16 Marco A.G.Pinto 2025-11-09 11:35:52 UTC
Created attachment 203833 [details]
Some icons still missing

Heya,

I installed the 25.8.3.2 from the archive on the other laptop and the menu app of WritingTool doesn't appear, nor do a few in the submenu.

Could you have another look at the fix?

Thanks!
Comment 17 Mike Kaganski 2025-11-09 12:10:03 UTC
(In reply to Marco A.G.Pinto from comment #16)

Why do you think they should?