tdf#168314: check if xGraphic is empty, not Any

Regression after commit 9d6e1594a298c9d41f3dc64ad80edf4b9868c2e8
(Deduplicate and unify using vcl::GetBitmap, 2024-11-08).

An Any with an empty graphic is not itself empty; such an any caused
the outer check to succeed, and therefore its 'else' branch never
executed, when it ought to.

Change-Id: I97115c7f7dbab4ec54b5e999e4b47ecdc8874e47
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193161
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit a8216f500c223797b13976678924b76c5effec65)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193170
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>